<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txversion"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/version"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <ListView
                android:id="@+id/listScanners"
                android:layout_width="100dp"
                android:layout_height="180dp"
                android:background="#eeeeee"
                android:choiceMode="singleChoice"
                android:clickable="false"
                android:focusable="true"
                android:footerDividersEnabled="false"/>

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="120dp"
                android:layout_height="180dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.5"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_launcher"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.5"/>

        </LinearLayout>

        <TextView
            android:id="@+id/txmessage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/message"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <Button
                    android:id="@+id/btnfinddevice"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/find_device"/>

                <Button
                    android:id="@+id/btninit"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/init"/>

                <Button
                    android:id="@+id/btnuninit"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/uninit"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkAutoSleep"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Auto sleep"/>

                <ToggleButton
                    android:id="@+id/buttonToggleSleep"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="ToggleButton"
                    android:textOff="Sleep(off)"
                    android:textOn="Sleep(on)"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sensitivity"
                    android:textSize="10sp"/>

                <SeekBar
                    android:id="@+id/seekBar1"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:max="7"
                    android:progress="0"/>

                <TextView
                    android:layout_width="35dp"
                    android:layout_height="wrap_content"
                    android:text="@string/security_level"
                    android:textSize="9.5dp"/>

                <SeekBar
                    android:id="@+id/SeekBar02"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:max="7"
                    android:progress="0"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:text="@string/timeout"
                    android:textSize="10sp"/>

                <SeekBar
                    android:id="@+id/SeekBar01"
                    android:layout_width="98dp"
                    android:layout_height="wrap_content"
                    android:max="15"
                    android:progress="0"/>

                <CheckBox
                    android:id="@+id/chkfastmode"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/fast_mode"
                    android:textSize="10sp"/>

                <CheckBox
                    android:id="@+id/chkScanningMode"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:text="@string/Crop_Scan_Mode"
                    android:textSize="10sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnsuprema"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/suprema"/>

                <Button
                    android:id="@+id/btntypeiso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/iso"/>

                <Button
                    android:id="@+id/btntypeansi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ansi"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <Button
                    android:id="@+id/btncapturesingle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/capture_single"
                    android:textSize="10sp"/>

                <Button
                    android:id="@+id/btnstartcapturing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/start_capturing"
                    android:textSize="10sp"/>

                <Button
                    android:id="@+id/btnAbort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/abort_capturing"
                    android:textSize="10sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnenroll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/enroll"/>

                <Button
                    android:id="@+id/btnverify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/matching"/>

                <ToggleButton
                    android:id="@+id/tbtn_AutoRotate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/auto_rotate"
                    android:textOff="AutoRotate(Off)"
                    android:textOn="AutoRotate(On)"
                    android:textSize="11sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/insert_name"
                    android:textSize="10sp"/>

                <Button
                    android:id="@+id/btndelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_all_user"
                    android:textSize="10sp"/>

                <Button
                    android:id="@+id/btnSaveBmp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/savebmpfile"
                    android:textSize="10sp"/>

                <Button
                    android:id="@+id/btnSaveWSQ"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/savewsqfile"
                    android:textSize="10sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <Button
                    android:id="@+id/btnSaveTemplate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/SaveTemplate"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>